--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "dotenv": "^16.0.1",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
     "react": "18.2.0",
